Fix for alignement of header

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -244,9 +244,9 @@
   box-shadow: 6px 4px 84px rgba(0, 0, 0, 0.15);
   padding: 16px 0px;
   width: 210px;
-  position: absolute;
+  position: relative;
   top: 10px;
-  right: 230px;
+  left: 190px;
 
   .profile-image {
     width: 85px;
